--- a/scss/elements/_backgrounds.scss
+++ b/scss/elements/_backgrounds.scss
@@ -6,6 +6,7 @@
 @each $name, $theme in variables.$themes {
     $primary: map.get($theme, "primary");
     $secondary: map.get($theme, "secondary");
+    $tertiary: map.get($theme, "tertiary");
     $complement: map.get($theme, "complement");
     $text: map.get($theme, "text-colour");
 
@@ -19,6 +20,11 @@
         color: $text;
     } 
 
+    .#{$name}.fill.tertiary {
+        background-color: $tertiary;
+        color: $text;
+    } 
+
     .#{$name}.fill.complement {
         background-color: $complement;
         color: $text;
@@ -26,6 +32,11 @@
 
     .#{$name}.fill.complement.secondary {
         background-color: complement($secondary);
+        color: $text;
+    } 
+
+    .#{$name}.fill.complement.tertiary {
+        background-color: complement($tertiary);
         color: $text;
     } 
     
