--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,7 @@ body {
 
     .break.#{$name} {
         @extend %shadow-down-1;
+        @extend %margin-bottom-s;
         background-color: rgba($tertiary, 0.5);
         height: 1px;
         width: 100%;
