--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -55,8 +55,11 @@ $alpha-dark: #00000000;
 $themes: (
     "light": (
         "primary": #f7f7f7, 
-        "secondary": color-tone-shift(#f7f7f7), 
-        "tertiary": color-tone-shift(#f7f7f7, 25%), 
+        "secondary": adjust-hue(#f7f7f7, 120deg), 
+        "tertiary": adjust-hue(#f7f7f7, 240deg), 
+        "darkened": darken(#f7f7f7, 20%),
+        "lighten": lighten(#f7f7f7, 20%),
+        "shifted": color-tone-shift(#f7f7f7, 20%),
         "complement": complement(#f7f7f7), 
         "text-colour": $black,
         "fonts": $fonts,
@@ -67,9 +70,12 @@ $themes: (
     ), 
     "dark": ( 
         "primary": #080808, 
-        "secondary": color-tone-shift(#080808), 
+        "secondary": adjust-hue(#080808, 120deg), 
+        "tertiary": adjust-hue(#080808, 240deg), 
+        "darkened": darken(#080808, 20%),
+        "lighten": lighten(#080808, 20%),
+        "shifted": color-tone-shift(#080808, 20%),
         "complement": complement(#080808), 
-        "tertiary": color-tone-shift(#080808, 25%), 
         "text-colour": $white,
         "fonts": $fonts,
         "font-size": $font-size,
@@ -82,8 +88,11 @@ $themes: (
 @mixin add-theme($name, $primary) {
     $themes: map.merge($themes, ($name: (
         "primary": $primary, 
-        "secondary": color-tone-shift($primary), 
-        "tertiary": color-tone-shift($primary, 25%), 
+        "secondary": adjust-hue($primary, 120deg), 
+        "tertiary": adjust-hue($primary, 240deg), 
+        "darkened": darken($primary, 20%),
+        "lighten": lighten($primary, 20%),
+        "shifted": color-tone-shift($primary, 20%),
         "complement": complement($primary), 
         "text-colour": get-contrasting-bw($primary),
         "fonts": $fonts,
