Better colour tone options

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -59,6 +59,7 @@ $themes: (
         "tertiary": adjust-hue(#f7f7f7, 240deg), 
         "darkened": darken(#f7f7f7, 20%),
         "lighten": lighten(#f7f7f7, 20%),
+        "shifted-less": color-tone-shift(#f7f7f7, 10%),
         "shifted": color-tone-shift(#f7f7f7, 20%),
         "complement": complement(#f7f7f7), 
         "text-colour": $black,
@@ -74,6 +75,7 @@ $themes: (
         "tertiary": adjust-hue(#080808, 240deg), 
         "darkened": darken(#080808, 20%),
         "lighten": lighten(#080808, 20%),
+        "shifted-less": color-tone-shift(#080808, 10%),
         "shifted": color-tone-shift(#080808, 20%),
         "complement": complement(#080808), 
         "text-colour": $white,
@@ -92,6 +94,7 @@ $themes: (
         "tertiary": adjust-hue($primary, 240deg), 
         "darkened": darken($primary, 20%),
         "lighten": lighten($primary, 20%),
+        "shifted-less": color-tone-shift($primary, 10%),
         "shifted": color-tone-shift($primary, 20%),
         "complement": complement($primary), 
         "text-colour": get-contrasting-bw($primary),
