--- a/scss/_offsets.scss
+++ b/scss/_offsets.scss
@@ -13,57 +13,73 @@
     }
 }
 
-@each $type in variables.$offset-types {
-    //Generate offsets of fixed em value amounts.
-    @for $i from 1 through 10 {
-        @each $direction in variables.$offset-directions {
-            .#{$type}-#{$direction}-#{$i} {
-                #{$type}-#{$direction}: #{$i}em;
+@mixin offsets($scalar: 1) {
+    @each $type in variables.$offset-types {
+        //Generate offsets of fixed em value amounts.
+        @for $i from 1 through 10 {
+            @each $direction in variables.$offset-directions {
+                .#{$type}-#{$direction}-#{$i} {
+                    #{$type}-#{$direction}: #{$i * $scalar}em;
+                }
+            }
+
+            .#{$type}-horizontal-#{$i} {
+                #{$type}: {
+                    left: #{$i * $scalar}em;
+                    right: #{$i * $scalar}em;
+                }
+            }
+
+            .#{$type}-vertical-#{$i} {
+                #{$type}: {
+                    top: #{$i * $scalar}em;
+                    bottom: #{$i * $scalar}em;
+                }
+            }
+
+            .#{$type}-#{$i} {
+                #{$type}: #{$i * $scalar}em;
             }
         }
 
-        .#{$type}-horizontal-#{$i} {
-            #{$type}: {
-                left: #{$i}em;
-                right: #{$i}em;
+        @each $level, $value in variables.$offset-values {
+            @each $direction in variables.$offset-directions {
+                .#{$type}-#{$direction}-#{$level} {
+                    #{$type}-#{$direction}: $value * $scalar;
+                }
             }
-        }
 
-        .#{$type}-vertical-#{$i} {
-            #{$type}: {
-                top: #{$i}em;
-                bottom: #{$i}em;
+            .#{$type}-horizontal-#{$level} {
+                #{$type}: {
+                    left: $value * $scalar;
+                    right: $value * $scalar;
+                }
             }
-        }
 
-        .#{$type}-#{$i} {
-            #{$type}: #{$i}em;
+            .#{$type}-vertical-#{$level} {
+                #{$type}: {
+                    top: $value * $scalar;
+                    bottom: $value * $scalar;
+                }
+            }
+
+            .#{$type}-#{$level} {
+                #{$type}: $value * $scalar;
+            }
         }
     }
+}
 
-    @each $level, $value in variables.$offset-values {
-        @each $direction in variables.$offset-directions {
-            .#{$type}-#{$direction}-#{$level} {
-                #{$type}-#{$direction}: $value;
-            }
-        }
+@include offsets(1);
 
-        .#{$type}-horizontal-#{$level} {
-            #{$type}: {
-                left: $value;
-                right: $value;
-            }
-        }
+@media screen and (max-width: variables.$screen-width-large) {
+    @include offsets(0.75);
+}
 
-        .#{$type}-vertical-#{$level} {
-            #{$type}: {
-                top: $value;
-                bottom: $value;
-            }
-        }
+@media screen and (max-width: variables.$screen-width-medium) {
+    @include offsets(0.6);
+}
 
-        .#{$type}-#{$level} {
-            #{$type}: $value;
-        }
-    }
+@media screen and (max-width: variables.$screen-width-small) {
+    @include offsets(0.45);
 }
