--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -16,7 +16,7 @@
         $primary: map.get($theme, "primary");
         $text: map.get($theme, "text");
 
-        p, span, a, .link {
+        p, span, a, select, option, .link {
             @include text(variables.$font-size * $scalar);
     
             &.#{$name} {
