--- a/scss/elements/_backgrounds.scss
+++ b/scss/elements/_backgrounds.scss
@@ -29,6 +29,10 @@
             &.inverted {
                 background-color: invert($secondary);
             }
+
+            &.transparent {
+                background-color: color.scale($secondary, $alpha: -25%);
+            }
         }
 
         &.tertiary {
@@ -40,6 +44,10 @@
 
             &.inverted {
                 background-color: invert($tertiary);
+            }
+
+            &.transparent {
+                background-color: color.scale($tertiary, $alpha: -25%);
             }
         }
 
@@ -53,6 +61,10 @@
             &.inverted {
                 background-color: invert($darkened-20);
             }
+
+            &.transparent {
+                background-color: color.scale($darkened-20, $alpha: -25%);
+            }
         }
 
         &.lightened-20 {
@@ -64,6 +76,10 @@
 
             &.inverted {
                 background-color: invert($lightened-20);
+            }
+
+            &.transparent {
+                background-color: color.scale($lightened-20, $alpha: -25%);
             }
         }
 
@@ -77,6 +93,10 @@
             &.inverted {
                 background-color: invert($shifted-10);
             }
+
+            &.transparent {
+                background-color: color.scale($shifted-10, $alpha: -25%);
+            }
         }
 
         &.shifted-20 {
@@ -89,6 +109,10 @@
             &.inverted {
                 background-color: invert($shifted-20);
             }
+
+            &.transparent {
+                background-color: color.scale($shifted-20, $alpha: -25%);
+            }
         }
 
         &.complement {
@@ -97,6 +121,10 @@
 
         &.inverted {
             background-color: $inverted;
+        }
+
+        &.transparent {
+            background-color: color.scale($primary, $alpha: -25%);
         }
     }
 
