--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9739,6 +9739,9 @@ h6, .h6-text {
 .light.fill.secondary.inverted {
   background-color: #080808;
 }
+.light.fill.secondary.transparent {
+  background-color: rgba(247, 247, 247, 0.75);
+}
 .light.fill.tertiary {
   background-color: #f7f7f7;
 }
@@ -9747,6 +9750,9 @@ h6, .h6-text {
 }
 .light.fill.tertiary.inverted {
   background-color: #080808;
+}
+.light.fill.tertiary.transparent {
+  background-color: rgba(247, 247, 247, 0.75);
 }
 .light.fill.darkened-20 {
   background-color: #c4c4c4;
@@ -9757,6 +9763,9 @@ h6, .h6-text {
 .light.fill.darkened-20.inverted {
   background-color: #3b3b3b;
 }
+.light.fill.darkened-20.transparent {
+  background-color: rgba(196, 196, 196, 0.75);
+}
 .light.fill.lightened-20 {
   background-color: white;
 }
@@ -9765,6 +9774,9 @@ h6, .h6-text {
 }
 .light.fill.lightened-20.inverted {
   background-color: black;
+}
+.light.fill.lightened-20.transparent {
+  background-color: rgba(255, 255, 255, 0.75);
 }
 .light.fill.shifted-10 {
   background-color: #dedede;
@@ -9775,6 +9787,9 @@ h6, .h6-text {
 .light.fill.shifted-10.inverted {
   background-color: #212121;
 }
+.light.fill.shifted-10.transparent {
+  background-color: rgba(222, 222, 222, 0.75);
+}
 .light.fill.shifted-20 {
   background-color: #c4c4c4;
 }
@@ -9784,11 +9799,17 @@ h6, .h6-text {
 .light.fill.shifted-20.inverted {
   background-color: #3b3b3b;
 }
+.light.fill.shifted-20.transparent {
+  background-color: rgba(196, 196, 196, 0.75);
+}
 .light.fill.complement {
   background-color: #f7f7f7;
 }
 .light.fill.inverted {
   background-color: #080808;
+}
+.light.fill.transparent {
+  background-color: rgba(247, 247, 247, 0.75);
 }
 
 .gradient.light, .gradient-hover-animation.light {
@@ -9815,6 +9836,9 @@ h6, .h6-text {
 .dark.fill.secondary.inverted {
   background-color: #f7f7f7;
 }
+.dark.fill.secondary.transparent {
+  background-color: rgba(8, 8, 8, 0.75);
+}
 .dark.fill.tertiary {
   background-color: #080808;
 }
@@ -9823,6 +9847,9 @@ h6, .h6-text {
 }
 .dark.fill.tertiary.inverted {
   background-color: #f7f7f7;
+}
+.dark.fill.tertiary.transparent {
+  background-color: rgba(8, 8, 8, 0.75);
 }
 .dark.fill.darkened-20 {
   background-color: black;
@@ -9833,6 +9860,9 @@ h6, .h6-text {
 .dark.fill.darkened-20.inverted {
   background-color: white;
 }
+.dark.fill.darkened-20.transparent {
+  background-color: rgba(0, 0, 0, 0.75);
+}
 .dark.fill.lightened-20 {
   background-color: #3b3b3b;
 }
@@ -9841,6 +9871,9 @@ h6, .h6-text {
 }
 .dark.fill.lightened-20.inverted {
   background-color: #c4c4c4;
+}
+.dark.fill.lightened-20.transparent {
+  background-color: rgba(59, 59, 59, 0.75);
 }
 .dark.fill.shifted-10 {
   background-color: #222222;
@@ -9851,6 +9884,9 @@ h6, .h6-text {
 .dark.fill.shifted-10.inverted {
   background-color: #dddddd;
 }
+.dark.fill.shifted-10.transparent {
+  background-color: rgba(34, 34, 34, 0.75);
+}
 .dark.fill.shifted-20 {
   background-color: #3b3b3b;
 }
@@ -9860,11 +9896,17 @@ h6, .h6-text {
 .dark.fill.shifted-20.inverted {
   background-color: #c4c4c4;
 }
+.dark.fill.shifted-20.transparent {
+  background-color: rgba(59, 59, 59, 0.75);
+}
 .dark.fill.complement {
   background-color: #080808;
 }
 .dark.fill.inverted {
   background-color: #f7f7f7;
+}
+.dark.fill.transparent {
+  background-color: rgba(8, 8, 8, 0.75);
 }
 
 .gradient.dark, .gradient-hover-animation.dark {
@@ -9891,6 +9933,9 @@ h6, .h6-text {
 .light-cyan.fill.secondary.inverted {
   background-color: #00ee08;
 }
+.light-cyan.fill.secondary.transparent {
+  background-color: rgba(255, 17, 247, 0.75);
+}
 .light-cyan.fill.tertiary {
   background-color: #f7ff11;
 }
@@ -9899,6 +9944,9 @@ h6, .h6-text {
 }
 .light-cyan.fill.tertiary.inverted {
   background-color: #0800ee;
+}
+.light-cyan.fill.tertiary.transparent {
+  background-color: rgba(247, 255, 17, 0.75);
 }
 .light-cyan.fill.darkened-20 {
   background-color: #00a4aa;
@@ -9909,6 +9957,9 @@ h6, .h6-text {
 .light-cyan.fill.darkened-20.inverted {
   background-color: #ff5b55;
 }
+.light-cyan.fill.darkened-20.transparent {
+  background-color: rgba(0, 164, 170, 0.75);
+}
 .light-cyan.fill.lightened-20 {
   background-color: #77faff;
 }
@@ -9917,6 +9968,9 @@ h6, .h6-text {
 }
 .light-cyan.fill.lightened-20.inverted {
   background-color: #880500;
+}
+.light-cyan.fill.lightened-20.transparent {
+  background-color: rgba(119, 250, 255, 0.75);
 }
 .light-cyan.fill.shifted-10 {
   background-color: #00d6dd;
@@ -9927,6 +9981,9 @@ h6, .h6-text {
 .light-cyan.fill.shifted-10.inverted {
   background-color: #ff2922;
 }
+.light-cyan.fill.shifted-10.transparent {
+  background-color: rgba(0, 214, 221, 0.75);
+}
 .light-cyan.fill.shifted-20 {
   background-color: #00a4aa;
 }
@@ -9936,11 +9993,17 @@ h6, .h6-text {
 .light-cyan.fill.shifted-20.inverted {
   background-color: #ff5b55;
 }
+.light-cyan.fill.shifted-20.transparent {
+  background-color: rgba(0, 164, 170, 0.75);
+}
 .light-cyan.fill.complement {
   background-color: #ff1911;
 }
 .light-cyan.fill.inverted {
   background-color: #ee0800;
+}
+.light-cyan.fill.transparent {
+  background-color: rgba(17, 247, 255, 0.75);
 }
 
 .gradient.light-cyan, .gradient-hover-animation.light-cyan {
@@ -9967,6 +10030,9 @@ h6, .h6-text {
 .light-green.fill.secondary.inverted {
   background-color: #b1e200;
 }
+.light-green.fill.secondary.transparent {
+  background-color: rgba(78, 29, 255, 0.75);
+}
 .light-green.fill.tertiary {
   background-color: #ff4e1d;
 }
@@ -9975,6 +10041,9 @@ h6, .h6-text {
 }
 .light-green.fill.tertiary.inverted {
   background-color: #00b1e2;
+}
+.light-green.fill.tertiary.transparent {
+  background-color: rgba(255, 78, 29, 0.75);
 }
 .light-green.fill.darkened-20 {
   background-color: #00b627;
@@ -9985,6 +10054,9 @@ h6, .h6-text {
 .light-green.fill.darkened-20.inverted {
   background-color: #ff49d8;
 }
+.light-green.fill.darkened-20.transparent {
+  background-color: rgba(0, 182, 39, 0.75);
+}
 .light-green.fill.lightened-20 {
   background-color: #83ff9e;
 }
@@ -9993,6 +10065,9 @@ h6, .h6-text {
 }
 .light-green.fill.lightened-20.inverted {
   background-color: #7c0061;
+}
+.light-green.fill.lightened-20.transparent {
+  background-color: rgba(131, 255, 158, 0.75);
 }
 .light-green.fill.shifted-10 {
   background-color: #00e933;
@@ -10003,6 +10078,9 @@ h6, .h6-text {
 .light-green.fill.shifted-10.inverted {
   background-color: #ff16cc;
 }
+.light-green.fill.shifted-10.transparent {
+  background-color: rgba(0, 233, 51, 0.75);
+}
 .light-green.fill.shifted-20 {
   background-color: #00b627;
 }
@@ -10012,11 +10090,17 @@ h6, .h6-text {
 .light-green.fill.shifted-20.inverted {
   background-color: #ff49d8;
 }
+.light-green.fill.shifted-20.transparent {
+  background-color: rgba(0, 182, 39, 0.75);
+}
 .light-green.fill.complement {
   background-color: #ff1dce;
 }
 .light-green.fill.inverted {
   background-color: #e200b1;
+}
+.light-green.fill.transparent {
+  background-color: rgba(29, 255, 78, 0.75);
 }
 
 .gradient.light-green, .gradient-hover-animation.light-green {
@@ -10043,6 +10127,9 @@ h6, .h6-text {
 .dark-green.fill.secondary.inverted {
   background-color: #fbf8cf;
 }
+.dark-green.fill.secondary.transparent {
+  background-color: rgba(4, 7, 48, 0.75);
+}
 .dark-green.fill.tertiary {
   background-color: #300407;
 }
@@ -10051,6 +10138,9 @@ h6, .h6-text {
 }
 .dark-green.fill.tertiary.inverted {
   background-color: #cffbf8;
+}
+.dark-green.fill.tertiary.transparent {
+  background-color: rgba(48, 4, 7, 0.75);
 }
 .dark-green.fill.darkened-20 {
   background-color: black;
@@ -10061,6 +10151,9 @@ h6, .h6-text {
 .dark-green.fill.darkened-20.inverted {
   background-color: white;
 }
+.dark-green.fill.darkened-20.transparent {
+  background-color: rgba(0, 0, 0, 0.75);
+}
 .dark-green.fill.lightened-20 {
   background-color: #158e0c;
 }
@@ -10069,6 +10162,9 @@ h6, .h6-text {
 }
 .dark-green.fill.lightened-20.inverted {
   background-color: #ea71f3;
+}
+.dark-green.fill.lightened-20.transparent {
+  background-color: rgba(21, 142, 12, 0.75);
 }
 .dark-green.fill.shifted-10 {
   background-color: #0e5f08;
@@ -10079,6 +10175,9 @@ h6, .h6-text {
 .dark-green.fill.shifted-10.inverted {
   background-color: #f1a0f7;
 }
+.dark-green.fill.shifted-10.transparent {
+  background-color: rgba(14, 95, 8, 0.75);
+}
 .dark-green.fill.shifted-20 {
   background-color: #158e0c;
 }
@@ -10088,11 +10187,17 @@ h6, .h6-text {
 .dark-green.fill.shifted-20.inverted {
   background-color: #ea71f3;
 }
+.dark-green.fill.shifted-20.transparent {
+  background-color: rgba(21, 142, 12, 0.75);
+}
 .dark-green.fill.complement {
   background-color: #2d0430;
 }
 .dark-green.fill.inverted {
   background-color: #f8cffb;
+}
+.dark-green.fill.transparent {
+  background-color: rgba(7, 48, 4, 0.75);
 }
 
 .gradient.dark-green, .gradient-hover-animation.dark-green {
@@ -10119,6 +10224,9 @@ h6, .h6-text {
 .dark-blue.fill.secondary.inverted {
   background-color: #d1faf6;
 }
+.dark-blue.fill.secondary.transparent {
+  background-color: rgba(46, 5, 9, 0.75);
+}
 .dark-blue.fill.tertiary {
   background-color: #092e05;
 }
@@ -10127,6 +10235,9 @@ h6, .h6-text {
 }
 .dark-blue.fill.tertiary.inverted {
   background-color: #f6d1fa;
+}
+.dark-blue.fill.tertiary.transparent {
+  background-color: rgba(9, 46, 5, 0.75);
 }
 .dark-blue.fill.darkened-20 {
   background-color: black;
@@ -10137,6 +10248,9 @@ h6, .h6-text {
 .dark-blue.fill.darkened-20.inverted {
   background-color: white;
 }
+.dark-blue.fill.darkened-20.transparent {
+  background-color: rgba(0, 0, 0, 0.75);
+}
 .dark-blue.fill.lightened-20 {
   background-color: #0f1b8a;
 }
@@ -10145,6 +10259,9 @@ h6, .h6-text {
 }
 .dark-blue.fill.lightened-20.inverted {
   background-color: #f0e475;
+}
+.dark-blue.fill.lightened-20.transparent {
+  background-color: rgba(15, 27, 138, 0.75);
 }
 .dark-blue.fill.shifted-10 {
   background-color: #0a125c;
@@ -10155,6 +10272,9 @@ h6, .h6-text {
 .dark-blue.fill.shifted-10.inverted {
   background-color: #f5eda3;
 }
+.dark-blue.fill.shifted-10.transparent {
+  background-color: rgba(10, 18, 92, 0.75);
+}
 .dark-blue.fill.shifted-20 {
   background-color: #0f1b8a;
 }
@@ -10164,11 +10284,17 @@ h6, .h6-text {
 .dark-blue.fill.shifted-20.inverted {
   background-color: #f0e475;
 }
+.dark-blue.fill.shifted-20.transparent {
+  background-color: rgba(15, 27, 138, 0.75);
+}
 .dark-blue.fill.complement {
   background-color: #2e2a05;
 }
 .dark-blue.fill.inverted {
   background-color: #faf6d1;
+}
+.dark-blue.fill.transparent {
+  background-color: rgba(5, 9, 46, 0.75);
 }
 
 .gradient.dark-blue, .gradient-hover-animation.dark-blue {
